<resources>
    <string name="app_name">KegiatanKu</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="sandi">Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="nama">Nama</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun ?</string>
    <string name="masuk_sekarang">Masuk sekarang</string>
    <string name="tidak_punya_akun">Tidak punya akun ?</string>
    <string name="daftar_sekarang">Daftar sekarang</string>
    <string name="ulangi_sandi">Ulangi Sandi</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tambahkan_kegiatan_baru">Tambahkan Kegiatan Baru</string>
    <string name="kegiatanku">KegiatanKu</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="tambah_task">Tambah task</string>
</resources>