<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity$LoginActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="50dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="@dimen/dimen15"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_2"/>

        <!-- nama -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="0dp"
            app:boxBackgroundColor="@color/white"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black">
            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nama"
                android:textColor="@color/black"
                android:fontFamily="@font/segoe_ui"
                android:textSize="18sp"
                android:inputType="textPersonName"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- email -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="0dp"
            app:boxBackgroundColor="@color/white"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black">
            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:fontFamily="@font/segoe_ui"
                android:textSize="18sp"
                android:inputType="textEmailAddress"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- password -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="0dp"
            app:boxBackgroundColor="@color/white"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black">
            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sandi"
                android:textColor="@color/black"
                android:fontFamily="@font/segoe_ui"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- password -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="0dp"
            app:boxBackgroundColor="@color/white"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black">
            <EditText
                android:id="@+id/editRePassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/ulangi_sandi"
                android:textColor="@color/black"
                android:fontFamily="@font/segoe_ui"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/blue"
            android:padding="12dp"
            android:text="@string/daftar"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:background="@drawable/btn_login_register"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudah_punya_akun"
                android:textColor="@color/black"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/goto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masuk_sekarang"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="0dp"
                android:textSize="15sp"
                android:textStyle="bold"
                />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>