<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_old"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tambahkan_kegiatan_baru"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <!-- Nama kegiatan -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:minHeight="48dp"
                android:gravity="center_vertical"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            >

            <EditText
                android:id="@+id/nameTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/kegiatanku"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
        </RelativeLayout>
    </LinearLayout>

    <!-- Nama kegiatan -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:minHeight="48dp"
                android:gravity="center_vertical"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            >

            <EditText
                android:id="@+id/descriptionTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/kegiatanku"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </RelativeLayout>
    </LinearLayout>

    <!--  aksi  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <!--  batal  -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            >
                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/batal"
                    android:backgroundTint="@color/blue"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    />
        </RelativeLayout>

        <!--  simpan  -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            >
            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simpan"
                android:backgroundTint="@color/blue"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textSize="18sp"
                />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>